--- a/app/src/main/res/layout/itemlista.xml
+++ b/app/src/main/res/layout/itemlista.xml
@@ -17,7 +17,7 @@
             android:src="@drawable/ic_restaurant_menu_black_24dp"/>
 
     <TextView
-            android:id="@+id/tvTitle"
+            android:id="@+id/tvMeal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="14sp"
